syntax = "proto3";

option csharp_namespace = "MyKudos.Kudos.gRPC";

import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";




message KudosRequest{
	string FromPersonId = 1;
	string ToPersonId = 2;
	string TitleId = 3;
	string Message = 4;
	google.protobuf.Timestamp  SendOn = 5;
	
}

message SendKudosResponse{
	bool succeed = 1;
	string error = 2;
}


message KudosResponse {
	string Id = 1;
	string FromPersonId = 2;
	string ToPersonId = 3;
	string TitleId = 4;
	string Message = 5;
	google.protobuf.Timestamp  Date = 6;
}

message PaginatedKudosResponse{
	repeated KudosResponse data = 1;
}

service KudosService {

rpc GetKudos (google.protobuf.Empty) returns (PaginatedKudosResponse);

rpc SendKudos(KudosRequest) returns (SendKudosResponse);
}